Swing Create pages e buttons func

--- a/SkyBoard/src/main/java/sky/skyboard/Home.form
+++ b/SkyBoard/src/main/java/sky/skyboard/Home.form
@@ -26,9 +26,9 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="0" pref="155" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="2" attributes="0">
-                  <Component id="jButton3" alignment="2" min="-2" pref="198" max="-2" attributes="0"/>
+                  <Component id="btnBaggageList" alignment="2" min="-2" pref="198" max="-2" attributes="0"/>
                   <Component id="jLabel1" alignment="2" min="-2" pref="165" max="-2" attributes="0"/>
-                  <Component id="jButton1" alignment="2" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnPassengerList" alignment="2" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="156" max="-2" attributes="0"/>
           </Group>
@@ -40,9 +40,9 @@
               <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="66" max="-2" attributes="0"/>
-              <Component id="jButton1" min="-2" pref="49" max="-2" attributes="0"/>
+              <Component id="btnPassengerList" min="-2" pref="49" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
-              <Component id="jButton3" min="-2" pref="49" max="-2" attributes="0"/>
+              <Component id="btnBaggageList" min="-2" pref="49" max="-2" attributes="0"/>
               <EmptySpace pref="36" max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -57,7 +57,7 @@
         <Property name="text" type="java.lang.String" value="SkyBoard"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="btnPassengerList">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Yu Gothic UI" size="18" style="1"/>
@@ -65,10 +65,10 @@
         <Property name="text" type="java.lang.String" value="Lista De Passageiros"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPassengerListActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton3">
+    <Component class="javax.swing.JButton" name="btnBaggageList">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Yu Gothic UI" size="18" style="1"/>
@@ -76,7 +76,7 @@
         <Property name="text" type="java.lang.String" value="Lista De Bagagens"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBaggageListActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
